# ProjectV_v1_2

./: CMakeLists.txt  Diadal.cpp  Diadal.h  Diadal_script_intro.txt  Makefile  README.md  actions.cpp  actions.h  alignment.cpp  attacks.cpp  attacks.h  character_class_information.cpp  character_class_information.h  character_setup.cpp  character_setup.h  combat.cpp  combat.h  game.cpp  game.h  hostile.cpp  hostile.h  ingame_entity.cpp  ingame_entity.h  primary_character.cpp  primary_character.h  primary_stats.cpp  primary_stats.h  projectV_driver.cpp  scene.cpp  secondary_stats.cpp  secondary_stats.h  support.cpp  support.h
Broken Code/Grid/: Grid.h  Grid.imp  Grid_square.h  Grid_square.imp
In Development/: Inventory.h  alignment.cpp  templateTBRenamed.cpp  templateTBRenamed.h
In_Development/Testing_suite/: CMakeLists.txt
In_Development/Testing_suite/include/: Grid.h  Grid.imp  Grid_square.h  Grid_square.imp  Unit_test.h
In_Development/Testing_suite/src/: Driver.cpp  Unit_test.cpp
R&D/Testing_suite/: CMakeLists.txt  README.md
R&D/Testing_suite/include/Grid/: Grid.h  Grid_square.h
R&D/Testing_suite/include/Scenario/: Test_Environment.h
R&D/Testing_suite/include/Unit_tests/: Unit_test.h
R&D/Testing_suite/src/: Driver.cpp
R&D/Testing_suite/src/Scenario/: Test_Environment.cpp
R&D/Testing_suite/src/Unit_tests/: Unit_test.cpp
data/: Diadal_script_intro.txt
include/: Alignment.h  Base_state.h  Character_class_information.h  Combat_entity.h  Combat_manager.h  Diadal.h  Diadal_story.h  Entity_states.imp  Grid.h  Grid.imp  Grid_square.h  Hostile.h  Ingame_entity.h  List_of_attacks.h  Movement_action.h  Primary_character.h  Primary_stats.h  State_machine.imp  actions.h  alignment.h  attacks.h  basic_state_AI.h  basic_state_AI.imp  character_class_information.h  character_setup.h  combat.h  combat_entity.h  entity_manager.h  entity_states.h  entity_states.imp  game.h  grid.h  grid.imp  hostile.h  ingame_entity.h  inventory.h  primary_character.h  primary_stats.h  random.h  scene.h  (+4 more)
include/AI/: Base_state.h  Entity_states.h  Entity_states.imp  State_machine.h  State_machine.imp
include/Actions/: Actions.h  Flee_action.h  Movement_action.h
include/Attacks/: Attack_stats.h  Attacks.h  Item_attack.h  List_of_attacks.h  Primary_attacks.h  Ultimate_attacks.h
include/Character_creation/: Character_creation_command.h  Player_class_catalog.h
include/Combat_manager/: Combat_manager.h
include/Diadal/: Diadal.h
include/Entity/: Combat_entity.h  Hostile.h  Ingame_entity.h  Primary_character.h
include/Game/: Game.h  Game_settings.h
include/Grid/: Grid.h  Grid.imp  Grid_square.h  Grid_square.imp
include/Primary_stats/: Primary_attributes.h  Primary_stats.h  Secondary_attributes.h  Secondary_attributes_character.h  Secondary_attributes_endurance.h  Secondary_attributes_intelligence.h  Secondary_attributes_leadership.h  Secondary_attributes_strength.h
include/Secondary_stats/: Secondary_stats.h  Secondary_stats_action.h  Secondary_stats_creator.h  Secondary_stats_interaction.h  Secondary_stats_knowledge.h  Secondary_stats_stature.h
include/Support/: random.h  random_messages.h  subject_observer_pattern.h  subscriber_observer_pattern.h  support.h
src/: Actions.cpp  Character_class_information.cpp  Combat_entity.cpp  Combat_manager.cpp  Diadal.cpp  Diadal_story.cpp  Flee_action.cpp  Game.cpp  Hostile.cpp  Ingame_entity.cpp  List_of_attacks.cpp  Movement_action.cpp  Primary_character.cpp  Primary_stats.cpp  ProjectV_driver.cpp  Secondary_stats.cpp  actions.cpp  attacks.cpp  basic_state_AI.cpp  character_class_information.cpp  character_setup.cpp  combat.cpp  combat_entity.cpp  entity_manager.cpp  entity_states.cpp  hostile.cpp  ingame_entity.cpp  primary_character.cpp  primary_stats.cpp  projectV_driver.cpp  random.cpp  random_messages.cpp  scene.cpp  secondary_stats.cpp  support.cpp  vector_quicksort.cpp
src/Actions/: Actions.cpp  Flee_action.cpp  Movement_action.cpp
src/Attacks/: Attack_stats.cpp  Attacks.cpp  Item_attack.cpp  List_of_attacks.cpp  Primary_attacks.cpp  Ultimate_attacks.cpp
src/Character_creation/: Character_creation_command.cpp  Player_class_catalog.cpp
src/Combat_manager/: Combat_manager.cpp
src/Diadal/: Diadal.cpp  Diadal_story.cpp  ProjectV_driver.cpp
src/Entity/: Combat_entity.cpp  Hostile.cpp  Ingame_entity.cpp  Primary_character.cpp
src/Game/: Game.cpp  Game_settings.cpp
src/Primary_stats/: Primary_attributes.cpp  Primary_stats.cpp  Secondary_attributes.cpp  Secondary_attributes_character.cpp  Secondary_attributes_endurance.cpp  Secondary_attributes_intelligence.cpp  Secondary_attributes_leadership.cpp  Secondary_attributes_strength.cpp
src/Secondary_stats/: Secondary_stats.cpp  Secondary_stats_action.cpp  Secondary_stats_creator.cpp  Secondary_stats_interaction.cpp  Secondary_stats_knowledge.cpp  Secondary_stats_stature.cpp
src/Support/: random.cpp  random_messages.cpp  subject_observer_pattern.cpp  subscriber_observer_pattern.cpp  support.cpp
